# lab_1__python_with_load_balancer

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  settings.py
technical/: learning_lab1  learning_lab1.service  learning_lab1_1.service  learning_lab1_2.service
testing/: locustfile.py
